# trading212

./: AGENTS.md  CLAUDE.md  trading212-api.md
.github/workflows/: ci.yml  docker-publish.yml  mutation-testing.yml
docs/plans/: 2024-08-31-pagination-improvements.md  2025-10-17-remote-mcp-docker-deployment.md
trading212-mcp-server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yml  local-changes.diff  pr-changes.diff  rust-changes.diff  test.diff
trading212-mcp-server/.cargo/: mutants.toml
trading212-mcp-server/.github/: CODEOWNERS  copilot-instructions.md
trading212-mcp-server/.github/workflows/: mutation-testing.yml
trading212-mcp-server/benches/: memory_benchmark.rs  trading212_benchmarks.rs
trading212-mcp-server/docs/: HTTP_CLIENT_OPTIMIZATION.md  MUTATION_TESTING.md
trading212-mcp-server/docs/plans/: mutation-testing-improvement-plan.md
trading212-mcp-server/examples/: real_data_benchmark.rs  streaming_default_test.rs
trading212-mcp-server/fixtures/: real_instruments.json
trading212-mcp-server/src/: cache.rs  config.rs  errors.rs  handler.rs  lib.rs  main.rs  tools.rs
trading212-mcp-server/tests/: approach_comparison_tests.rs  integration_tests.rs  mcp_protocol_tests.rs  mutation_integration_tests.rs  remote_server_tests.rs  trading212_api_tests.rs
