[package]
name = "trading212-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP server for Trading212 API integration"
license = "MIT"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
# Restrict to clippy::all and clippy::pedantic
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# Allow some pedantic lints that are too restrictive
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_field_names = "allow"

# Additional useful lints
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
reqwest = { version = "0.12.22", features = ["json"] }
urlencoding = "2.1.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rust-mcp-sdk = "0.5.0"
async-trait = "0.1.88"

[dev-dependencies]
tempfile = "3.20.0"
wiremock = "0.6.4"
